--- a/index.html
+++ b/index.html
@@ -2,9 +2,44 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/fidelion.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DUST80</title>
+    <meta
+      data-vue-tag="ssr"
+      property="og:type"
+      content="https://fidelion.io/"
+    />
+    <meta data-vue-tag="ssr" property="og:title" content="Fidelion" />
+    <meta
+      data-vue-tag="ssr"
+      property="og:description"
+      content="Explore the post-apocalyptic world of Project Fidelion, an NFT project featuring a unique story and art. Delve into the dystopian tale of “One empire, Nine factions, and One story” by visiting the website."
+    />
+    <meta data-vue-tag="ssr" property="og:image" content="/image.jpg" />
+    <meta
+      data-vue-tag="ssr"
+      property="twitter:card"
+      content="summary_large_image"
+    />
+    <meta
+      data-vue-tag="ssr"
+      property="twitter:url"
+      content="https://fidelion.io/"
+    />
+    <meta data-vue-tag="ssr" property="twitter:title" content="Fidelion" />
+    <meta
+      data-vue-tag="ssr"
+      property="twitter:description"
+      content="Explore the post-apocalyptic world of Project Fidelion, an NFT project featuring a unique story and art. Delve into the dystopian tale of “One empire, Nine factions, and One story” by visiting the website."
+    />
+    <meta data-vue-tag="ssr" property="twitter:image" content="/image.jpg" />
+    <meta
+      data-vue-tag="ssr"
+      data-key="description"
+      name="description"
+      content="Explore the post-apocalyptic world of Project Fidelion, an NFT project featuring a unique story and art. Delve into the dystopian tale of “One empire, Nine factions, and One story” by visiting the website."
+    />
+    <title>Fidelion</title>
   </head>
   <body>
     <div id="root"></div>
