property -> name for twitter

--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
     <meta data-vue-tag="ssr" property="og:image" content="/image.jpg" />
     <meta
       data-vue-tag="ssr"
-      property="twitter:card"
+      name="twitter:card"
       content="summary_large_image"
     />
     <meta
       data-vue-tag="ssr"
-      property="twitter:url"
+      name="twitter:url"
       content="https://fidelion.io/"
     />
     <meta data-vue-tag="ssr" property="twitter:title" content="Fidelion" />
     <meta
       data-vue-tag="ssr"
-      property="twitter:description"
+      name="twitter:description"
       content="Explore the post-apocalyptic world of Project Fidelion, an NFT project featuring a unique story and art. Delve into the dystopian tale of “One empire, Nine factions, and One story” by visiting the website."
     />
-    <meta data-vue-tag="ssr" property="twitter:image" content="/image.jpg" />
+    <meta data-vue-tag="ssr" name="twitter:image" content="/image.jpg" />
     <meta
       data-vue-tag="ssr"
       data-key="description"
