--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       name="twitter:url"
       content="https://fidelion.io/"
     />
-    <meta data-vue-tag="ssr" property="twitter:title" content="Fidelion" />
+    <meta data-vue-tag="ssr" name="twitter:title" content="Fidelion" />
     <meta
       data-vue-tag="ssr"
       name="twitter:description"
