fix: index.html image link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
       property="og:description"
       content="Explore the post-apocalyptic world of Project Fidelion, an NFT project featuring a unique story and art. Delve into the dystopian tale of “One empire, Nine factions, and One story” by visiting the website."
     />
-    <meta data-vue-tag="ssr" property="og:image" content="/image.jpg" />
+    <meta
+      data-vue-tag="ssr"
+      property="og:image"
+      content="http://fidelion.io/image.jpg"
+    />
     <meta
       data-vue-tag="ssr"
       name="twitter:card"
@@ -32,7 +36,11 @@
       name="twitter:description"
       content="Explore the post-apocalyptic world of Project Fidelion, an NFT project featuring a unique story and art. Delve into the dystopian tale of “One empire, Nine factions, and One story” by visiting the website."
     />
-    <meta data-vue-tag="ssr" name="twitter:image" content="/image.jpg" />
+    <meta
+      data-vue-tag="ssr"
+      name="twitter:image"
+      content="http://fidelion.io/image.jpg"
+    />
     <meta
       data-vue-tag="ssr"
       data-key="description"
