fix: harrier segment0

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta
       data-vue-tag="ssr"
       property="og:image"
-      content="http://fidelion.io/image.jpg"
+      content="https://fidelion.io/image.jpg"
     />
     <meta
       data-vue-tag="ssr"
@@ -39,7 +39,7 @@
     <meta
       data-vue-tag="ssr"
       name="twitter:image"
-      content="http://fidelion.io/image.jpg"
+      content="https://fidelion.io/image.jpg"
     />
     <meta
       data-vue-tag="ssr"
