--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/fidelion.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       data-vue-tag="ssr"
       property="og:type"
-      content="https://fidelion.io/"
+      content="https://story.fidelion.io"
     />
     <meta data-vue-tag="ssr" property="og:title" content="Fidelion" />
     <meta
@@ -18,7 +18,7 @@
     <meta
       data-vue-tag="ssr"
       property="og:image"
-      content="https://fidelion.io/image.jpg"
+      content="https://story.fidelion.io/image.png"
     />
     <meta
       data-vue-tag="ssr"
@@ -28,7 +28,7 @@
     <meta
       data-vue-tag="ssr"
       name="twitter:url"
-      content="https://fidelion.io/"
+      content="https://story.fidelion.io"
     />
     <meta data-vue-tag="ssr" name="twitter:title" content="Fidelion" />
     <meta
@@ -37,9 +37,8 @@
       content="Explore the post-apocalyptic world of Project Fidelion, an NFT project featuring a unique story and art. Delve into the dystopian tale of “One empire, Nine factions, and One story” by visiting the website."
     />
     <meta
-      data-vue-tag="ssr"
       name="twitter:image"
-      content="https://fidelion.io/image.jpg"
+      content="https://story.fidelion.io/image.png"
     />
     <meta
       data-vue-tag="ssr"
