fix: changed domain

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta
       data-vue-tag="ssr"
       property="og:type"
-      content="https://fidelion.io/"
+      content="https://story.fidelion.io/"
     />
     <meta data-vue-tag="ssr" property="og:title" content="Fidelion" />
     <meta
@@ -18,7 +18,7 @@
     <meta
       data-vue-tag="ssr"
       property="og:image"
-      content="https://fidelion.io/image.jpg"
+      content="https://story.fidelion.io/image.jpg"
     />
     <meta
       data-vue-tag="ssr"
@@ -28,7 +28,7 @@
     <meta
       data-vue-tag="ssr"
       name="twitter:url"
-      content="https://fidelion.io/"
+      content="https://story.fidelion.io/"
     />
     <meta data-vue-tag="ssr" name="twitter:title" content="Fidelion" />
     <meta
@@ -39,7 +39,7 @@
     <meta
       data-vue-tag="ssr"
       name="twitter:image"
-      content="https://fidelion.io/image.jpg"
+      content="https://story.fidelion.io/image.jpg"
     />
     <meta
       data-vue-tag="ssr"
